noinst_LTLIBRARIES = libfbxplaylist.la
libfbxplaylist_la_SOURCES = PlaylistBase.h PlaylistBase.cpp PlaylistFactory.h PlaylistFactory.cpp PlaylistM3U.h PlaylistM3U.cpp

pkglibplaylistdir = $(pkglibdir)/playlist
pkglibplaylist_LTLIBRARIES = libm3u.la
libm3u_la_SOURCES = PlaylistM3U.h PlaylistM3U.cpp
libm3u_la_LDFLAGS = -no-undefined -module -avoid-version
